src/main/java/org/example/error/ErrorResponse.java
package org.example.error;

public record ErrorResponse(String code, String message) {
}
